# youarebot-llm-classifier

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.fly.yml.template  docker-compose.yaml  fly.toml.template  pyproject.toml  run_all_windows.ps1
app/: llm_client.py  model_inference.py
app/api/: main.py
app/web/: streamlit_app.py
mlflow/artifacts/: champion_classifier.json
scripts/: 01_build_push_images.sh  02_deploy_fly.sh  03_test.sh  evaluate_zero_shot.py
services/classifier/: Dockerfile  champion_classifier.json  main.py
services/llm/: Dockerfile
services/orchestrator/: Dockerfile  main.py
